Fix | nav z-index + page start white space

--- a/src/assets/scss/layouts/_layouts-base.scss
+++ b/src/assets/scss/layouts/_layouts-base.scss
@@ -1,7 +1,7 @@
 .topSpace {
 
     opacity: 0;
-    height: 1.5rem;
+    height: 3.2rem;
 
 }
 
@@ -10,7 +10,7 @@
     .topSpace {
 
         opacity: 0;
-        height: 3rem;
+        height: 4.5rem;
     
     }
 
