--- a/src/assets/scss/partials/_partials-mainnav.scss
+++ b/src/assets/scss/partials/_partials-mainnav.scss
@@ -8,6 +8,8 @@
 
     border-bottom: 1px solid var(--color-grey-100);
 
+    z-index: 10;
+
 }
 
 .mainnav__content {
